Home work session 3

--- a/session 3/index.html
+++ b/session 3/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="bai-1.js";
+    <script src="datatypes.js";
         
     </script>
 </body>
