--- a/session 3/index.html
+++ b/session 3/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>                         
 </head>
 <body>
-    <script src="bai1.js">
+    <script src="bai-tap-2.js">
         
     </script>
 </body>
