--- a/session 9/index.html
+++ b/session 9/index.html
@@ -31,7 +31,7 @@
     <span>def</span>
     <br/>
     <span>ghi</span> -->
-    <h1 id = "test">Hello World</h1>
+    <!-- <h1 id = "test">Hello World</h1> -->
     <!-- <h2 class = "heading">Đây là thẻ h2</h2>
     <h3 class = "heading">Đây là thẻ h2</h3>
     <p id = "secondTag">
@@ -43,7 +43,7 @@
     <br>
     <br>
     <br> -->
-    <button onclick="changeText()"
+    <!-- <button onclick="changeText()"
             id = "button1"
             class = "classButton">
         Click here
@@ -66,16 +66,68 @@
     <div>
         <label>kiểu object: </label>
         <span class = "dataTypeObject"></span>
-    </div>
+    </div>-->
 
-    <script src ="html.js"></script>
+    <script src ="html.js"></script> 
 
-    Nhập tên <input id = 'inputName' />
+    <!-- Nhập tên <input id = 'inputName' />
     <br>
     <br>
     Nhập tuổi <input id = 'inputAge' />
     <br>
     <button onclick="submit()">Submit</button>
-    <h2 id = "welcome"></h2>
+    <h2 id = "welcome"></h2> -->
+    Bài 1:
+    <br>
+    Nhập N: <input id = "nhapN" type = "number">
+    <br>
+    <button onclick ="giaiThuaN()">Submit</button>
+    <h2 id ="ketQua"></h2>
+    <p>----------------------------------------</p>
+    Bài 2:
+    <br>
+    Nhập N: <input id = "nhapN1" type = "number">
+    <br>
+    <button onclick ="tongN()">Submit</button>
+    <h2 id ="ketQua1"></h2>
+    <p>----------------------------------------</p>
+    Bài 3:
+    <br>
+    Nhập a: <input id = "nhapA" type = "number">
+    <br>
+    Nhập b: <input id = "nhapB" type = "number">
+    <br>
+    <button onclick ="nhapAB()">Submit</button>
+    <h2 id ="cong"></h2>
+    <h2 id ="tru"></h2>
+    <h2 id ="nhan"></h2>
+    <h2 id ="chia"></h2>
+    <p>----------------------------------------</p>
+    Bài 4:
+    <br>
+    Nhập a4: <input id = "nhapA4">
+    <br>
+    nhap b4: <input id = "nhapB4">
+    <br>
+    <button onclick="giaiPhuongTrinh()"">Submit</button>
+    <h2 id = "giaiPhuongTrinh"></h2>
+    <p>----------------------------------------</p>
+    Bài 5:
+    <br>
+    Nhập tên: <input id = "name" placeholder="Nhập tên" type ="text">
+    <br>
+    Nhập tuổi: <input id = "age">
+    <br>
+    Nhập quê quán: <input id = "home">
+    <br>
+    <button onclick="printInfo()">Submit</button>
+    <h2 id ="printInfo"></h2>
+    <p>----------------------------------------</p>
+    Bài 6:
+    <br>
+    <button onclick="localTime()">Xem thời gian</button>
+    <p id = "localTime"></p>
+    <p>----------------------------------------</p>
+    Bài 7 : Tạo To do list
 </body>
 </html>
