--- a/session 9/to-do-list.html
+++ b/session 9/to-do-list.html
@@ -12,12 +12,13 @@
 <body>
     <script src="to-do-list.js"></script>
     <input id="addList" placeholder="To do list" onkeyup="keyPress(event)">
-    <table>
+    <table border="1">
         <tr>
-            <th id = "STT">STT</th>
-            <th id = "content">Content</th>
-            <th id = "done">Done</th>
-            <th id = "action">Action</th>
+            <th>STT</th>
+            <th>Content</th>
+            <th>Done</th>
+            <th>Action</th>
+        </tr id = "data"><tr>
         </tr>
     </table>
 </body>
